# genshin-wiki

./: Cargo.toml  README.md
.github/workflows/: update.yaml
calendar/: de-de.json  en-us.json  es-es.json  fr-fr.json  id-id.json  it-it.json  ja-jp.json  ko-kr.json  pt-pt.json  ru-ru.json  th-th.json  tr-tr.json  vi-vn.json  zh-cn.json  zh-tw.json
detail/de-de/: 1.json  10.json  100.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  1020.json  1021.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1031.json  1032.json  1033.json  1034.json  1035.json  1036.json  1037.json  1038.json  104.json  1041.json  1042.json  1043.json  1044.json  1045.json  (+4638 more)
detail/en-us/: 1.json  10.json  100.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  1020.json  1021.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1031.json  1032.json  1033.json  1034.json  1035.json  1036.json  1037.json  1038.json  104.json  1041.json  1042.json  1043.json  1044.json  (+5804 more)
example/: calendar.json  detail.json  list.json  navigation.json
navigation/: de-de.json  en-us.json  es-es.json  fr-fr.json  id-id.json  it-it.json  ja-jp.json  ko-kr.json  pt-pt.json  ru-ru.json  th-th.json  tr-tr.json  vi-vn.json  zh-cn.json  zh-tw.json
src/: cli.rs  config.rs  error.rs  io.rs  lib.rs  logging.rs  main.rs  testing.rs  utils.rs
(+61874 files in other folders)
