[package]
name = "wiki_update"
version = "0.4.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true
# debug = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
# serde_with = "3"
bytes = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
colored = "3"
regex = "1"
hex = "0.4"
scraper = "0.23"
csscolorparser = "0.7"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-recursion = "1"
num_cpus = "1.16.0"
schemars = "0.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
